codegen/ui_tests/export_fn_missing_value.stderr
error: requires value
  --> ui_tests/export_fn_missing_value.rs:10:13
   |
10 | #[export_fn(name)]
   |             ^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_missing_value.rs:17:8
   |
17 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
